third_party/move/move-compiler-v2/tests/visibility-checker/v1-typing/pack_unpack_private_script.move
module 0x42::M {
    struct T {}

}


script {

    use 0x42::M::T;

    fun main() {
        let t = T {  };
        let T {} = t;
    }
}
